--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "goit-js-hw-13-image-finder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-13-image-finder/",
+    "build": "parcel build ./src/index.html --public-url /goit-js-hw-13-image-finder/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
-    "gh-pages": "^3.2.3"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
   }
 }
