--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://galinagumenyuk.github.io/goit-js-hw-13-image-finder",
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
     "gh-pages": "^3.2.3",
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-handlebars-precompile": "^1.0.2"
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "pnotify": "^5.2.0",
+    "@pnotify/mobile": "^5.2.0"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-handlebars-precompile": "^1.0.2"
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "@pnotify/core": "^5.2.0",
+    "@pnotify/mobile": "^5.2.0"
   }
 }
