--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-13-image-finder/",
+    "build": "parcel build --no-minify src/index.html --public-url /goit-js-hw-13-image-finder/",
     "deploy": "gh-pages -d ./dist",
     "predeploy": "npm run build"
   },
